--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   font-family: "SpaceMono";
   src: url("./assets/fonts/SpaceMono-Regular.ttf");
 }
+@font-face {
+  font-family: "SpaceMonoBold";
+  src: url("./assets/fonts/SpaceMono-Bold.ttf");
+}
 :root {
   --Strongcyan: hsl(172, 67%, 45%);
   --Verydarkcyan: hsl(183, 100%, 15%);
@@ -74,7 +78,7 @@ main section .content div p span {
 main section button {
   width: 100%;
   padding: 0.75rem;
-  background-color: var(--Darkgrayishcyan);
+  background-color: var(--Strongcyan);
   color: var(--Verydarkcyan);
   border: none;
   outline: none;
@@ -92,13 +96,23 @@ form label #people {
   border-radius: 0.45rem;
   background-color: var(--Verylightgrayishcyan);
   border: none;
-  font-size: 24px;
+  font-family: "SpaceMonoBold";
+  font-size: 1.5rem;
   text-align: end;
   color: var(--Darkgrayishcyan);
 }
 form label #bill::placeholder,
-form label #people::placeholder {
-  color: var(--Darkgrayishcyan);
+form label #people::placeholder,
+.custom input[type="number"]::placeholder {
+  color: var(--Verydarkcyan);
+}
+.icon {
+  position: relative;
+}
+.icon img {
+  position: absolute;
+  top: 0;
+  left: 0.75rem;
 }
 form label div {
   display: grid;
@@ -109,6 +123,10 @@ form label div label:last-child span {
   background-color: var(--Verylightgrayishcyan);
   color: var(--Verydarkcyan);
   border: 2px solid var(--Grayishcyan);
+}
+form label div label:last-child span:hover {
+  background-color: var(--Verydarkcyan);
+  color: var(--White);
 }
 form label div label span {
   display: block;
@@ -124,15 +142,42 @@ form label div label input {
   position: absolute;
   visibility: hidden;
 }
+
 form label div label span:hover {
   background-color: var(--Verylightgrayishcyan);
   color: var(--Verydarkcyan);
   border: 2px solid var(--Grayishcyan);
+  cursor: pointer;
 }
 input[type="radio"]:checked + span {
   background-color: var(--Strongcyan);
   color: var(--Verydarkcyan);
   border: 2px solid transparent;
+}
+.custom {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.custom input[type="radio"] {
+  display: none;
+}
+.custom input[type="number"] {
+  visibility: visible;
+  padding: 0.75rem;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.45rem;
+  color: var(--Verydarkcyan);
+  border: 2px solid var(--Grayishcyan);
+  text-align: center;
+  font-size: 1rem;
+  background-color: var(--Verylightgrayishcyan);
+}
+.custom input[type="radio"]:checked + span {
+  display: none;
 }
 .attribution {
   font-size: 11px;
@@ -160,7 +205,7 @@ input::-webkit-inner-spin-button {
 .mobile {
   display: none;
 }
-@media (max-width: 40rem) {
+@media (max-width: 42rem) {
   .mobile {
     display: block;
     margin: 1rem 0 0 0;
